--- a/Config/Locations/Default/autoExposureWeightTableProvider.cfg
+++ b/Config/Locations/Default/autoExposureWeightTableProvider.cfg
@@ -1,6 +1,9 @@
 distanceThreshold = 3000;
 ballValidDelay = 1000;
 ballWeightRatio = 0.5;
+// The auto exposure weight table provider is used to provide the weights for the auto exposure algorithm.
+// This file is part of the Nao Team Berlin 2015 configuration package for the RoboCup Soccer Standard Platform League.
+//对于机器人摄像头的自动曝光算法，提供了权重表。
 useStaticTables = {
   upper = false;
   lower = false;
