--- a/Config/Locations/Default/staticInitialPoseProvider.cfg
+++ b/Config/Locations/Default/staticInitialPoseProvider.cfg
@@ -3,11 +3,12 @@ secondTeam = false;
 loadVariation = 0;
 poseVariations = [
 { poseVaria = [
-    { translation = {x = -3000; y = 0; }; rotation = 0deg; },
-    { translation = {x = 1000; y = -1000; }; rotation = 90deg; },
-    { translation = {x = 1000; y = 1000; }; rotation = -90deg; },
-    { translation = {x = 0; y = 0; }; rotation = 0deg; },
-    { translation = {x = 2000; y = -2000; }; rotation = 90deg; }
+    { translation = {x = -2000; y = 0; }; rotation = 0deg; },   // 中锋
+    { translation = {x = -1000; y = -1000; }; rotation = 90deg; }, // 左前卫
+    { translation = {x = -1000; y = 1000; }; rotation = -90deg; }, // 右前卫
+    { translation = {x = -3000; y = -1500; }; rotation = 90deg; }, // 左后卫
+    { translation = {x = -3000; y = 1500; }; rotation = -90deg; }  // 右后卫
+    
 ];},
 { poseVaria = [
     { translation = {x = -3000; y = 0; }; rotation = 0deg; },
